refactor: Separação do projeto. Melhorias no adicionar musica. #85
