# controller/youtube.js
@@ -1,0 +1,22 @@
+const youtubeSearch = require('youtube-sr');
+
+const retornaMusicaYoutube = (busca) => new Promise((success, reject) => {
+    youtubeSearch.search(busca, {limit: 5})
+        .then(x => {
+
+            let listaBuscas = x.map(json => {
+                return {
+                    'IdMusica': json["id"],
+                    'Url': json["url"],
+                    'Titulo': json["title"],
+                    'Duracao': json["duration"] / 1000,
+                    'Capa': json["thumbnail"]["url"]
+                }
+            });
+
+            success(listaBuscas);
+        })
+        .catch(err => reject(err));
+});
+
+module.exports = {retornaMusicaYoutube}
